--- a/react_practice5/package.json
+++ b/react_practice5/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "classnames": "^2.3.1",
+    "immer": "^9.0.14",
     "koa": "^2.13.4",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
