--- a/react_practice5/package.json
+++ b/react_practice5/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "immer": "^9.0.14",
     "koa": "^2.13.4",
